Revert Scholar icon dark mode fix and reduce social icon sizes

--- a/css/main_1603233531.css
+++ b/css/main_1603233531.css
@@ -722,14 +722,6 @@ pre code {
 
 [data-theme="dark"] .social-icon-color {
   filter: none;
-  background-color: transparent;
-}
-
-[data-theme="dark"] .social-icon-scholar {
-  background-color: #fff;
-  border-radius: 50%;
-  padding: 2px;
-  box-sizing: content-box;
 }
 
 /* Dark mode for blockquotes */
